# Game01

./: .gitignore  A Small Fiction.txt  CMakeLists.txt  CREDITS.md  CoreData.pak  Game01.cbp  Game01_vs2012.vcxproj  Game01_vs2015.vcxproj  README.md  game01.settings  worldserver.conf
Source/: Game01.cpp  Game01.h  Settings.h
Source/Toybox/Controllers/: AxisCtrlSystem.cpp  AxisCtrlSystem.h  CameraCtrl.cpp  CameraCtrl.h  CarCtrl.cpp  CarCtrl.h  DynamicCharacterCtrl.cpp  DynamicCharacterCtrl.h  KinematicCharControls.h  KinematicCharState.h  KinematicCharacterCtrl.cpp  KinematicCharacterCtrl.h  ShipCtrl.cpp  ShipCtrl.h  SpaceshipCtrl.cpp  SpaceshipCtrl.h  VehicleCtrlSystem.cpp  VehicleCtrlSystem.h  VehicleWeaponCtrl.cpp  VehicleWeaponCtrl.h  WheeledVehicleCtrl.cpp  WheeledVehicleCtrl.h
Source/Toybox/Core/: Debug.cpp  Debug.h  IO.cpp  IO.h  IncGuards.h  Settings.h  Toybox.cpp  Toybox.h  ToyboxDefs.h
Source/Toybox/Engine/: InputCtrl.cpp  InputCtrl.h  Scene.cpp  Scene.h
Source/Toybox/Input/: ControlMap.cpp  ControlMap.h  Controls.cpp  Controls.h  InputMap.cpp  InputMap.h  InputState.cpp  InputState.h
Source/Toybox/Math/: Vector3Ext.cpp  Vector3Ext.h
data/characters/human/: julia.xml
data/effects/: exhaust_blue_02.xml  exhaust_red_02.xml
data/materials/architecture/: cube.xml
data/materials/characters/human/: julia.xml
data/materials/effects/: particle_flare.xml
data/materials/skyboxes/: corona.xml  interstellar.xml
data/materials/terrain/: zone001.xml
data/materials/vehicles/ground/: apc_a01.xml
data/materials/vehicles/space/: fighter_a02.xml  fighter_a04.xml
data/models/architecture/cube/: collision.mdl  cube.mdl
data/models/characters/human/: f_walk.ani  julia.mdl
data/models/skybox/: skybox.mdl
data/models/vehicles/ground/apc_a01/: apc_a01.mdl  collision.mdl
data/models/vehicles/ground/wheel_a01/: wheel_a01.mdl
data/models/vehicles/space/fighter_a02/: collision.mdl  fighter_a02.mdl
data/models/vehicles/space/fighter_a04/: collision.mdl  fighter_a04.mdl
data/sectors/ground/: interstellar.xml
data/sectors/space/: corona.scene  corona.xml
data/textures/characters/human/: julia_d.dds  julia_n.dds
data/textures/effects/: sparkle.dds
data/textures/skyboxes/: corona+x.dds  corona+y.dds  corona+z.dds  corona-x.dds  corona-y.dds  corona-z.dds  corona.xml  interstellar+x.dds  interstellar+y.dds  interstellar+z.dds  interstellar-x.dds  interstellar-y.dds  interstellar-z.dds  interstellar.xml
data/textures/terrain/: dirt1.dds  grass2.dds  rock5.dds  sand1.dds
data/textures/vehicles/space/fighter_a02/: fighter_a02_d.dds  fighter_a02_e.dds  fighter_a02_n.dds
data/textures/vehicles/space/fighter_a04/: fighter_a04_d.dds  fighter_a04_e.dds  fighter_a04_n.dds
data/ui/: hud_space.xml
data/vehicles/ground/: apc_a01.xml  wheel_a01.xml
data/vehicles/space/: fighter_a02.xml  fighter_a04.xml
